add some .md files

--- a/MD/20171120.md
+++ b/MD/20171120.md
@@ -15,9 +15,9 @@
 
 		127.0.0.1:6379>ping
 		pong //表示ping通
-* config set requirpass 'password' -- 设置密码
+* config set requirepass 'password' -- 设置密码
 		
-		127.0.0.1:6379>config set requirpass 'password'
+		127.0.0.1:6379>config set requirepass 'password'
 * auth 'password' -- 登录
 
 		127.0.0.1:6379>auth 'password'
@@ -31,3 +31,5 @@
 
 			su username
 			psql
+
+####5. [nodejs](https://yq.aliyun.com/articles/8625)
