--- a/MD/20171120.md
+++ b/MD/20171120.md
@@ -22,6 +22,11 @@
 
 		127.0.0.1:6379>auth 'password'
 
+* 命令行带配置文件启动reids。注意：需要在redis的安装目录下进行
+ 
+		redis-server --service-start redis.windows-service.conf
+
+
 ####4. [PostgreSQL 用户和权限管理](http://blog.csdn.net/italyfiori/article/details/43966109)
 1. 登录
 	* 方式1:指定参数登录
