--- a/MD/20171124-项目部署过程.md
+++ b/MD/20171124-项目部署过程.md
@@ -14,7 +14,9 @@
 		bash createallprops
 2. build（general模式）
 	
-		gradle build -x test -Dappbuild=true -PenvironmentName=general -Dfullconnectors=true
+		gradle build -x test -Dappbuild=false -PenvironmentName=general -Dfullconnectors=true
+3. build（app模式）
+		gradle clean build -x test -Dappbuild=true -PenvironmentName=general-app -Dfullconnectors=true
 
 3. 运行jar包，启动服务
 	
